<resources>
    <string name="system_debug_on">false</string>

    <string name="app_name">众牛社区</string>
    <string name="text_tab_investment">投资</string>
    <string name="text_tab_home">首页</string>
    <string name="text_tab_community">社区</string>
    <string name="text_tab_motion">动态</string>
    <string name="text_tab_message">消息</string>
    <string name="text_tab_me">我的</string>
    <string name="network_unknown_error_tip">网络不给力，请稍后再试!</string>
    <string name="online_error_layout_text_tip_5">页面加载失败啦，</string>
    <string name="please_retry">请重试</string>
    <string name="text_confirm">确定</string>
    <string name="text_cancle">取消</string>
    <string name="choice_confirm_or_cancle">确定要退出吗？</string>
    <string name="share_weixin_toast">本机未安装微信</string>
    <string name="error_no_refresh">%1$s(%2$s)</string>
    <string name="text_share_more">更多分享</string>

    <!-- WXEntryActivity -->
    <string name="login_wx_ok">登录成功！</string>
    <string name="login_wx_err">登录出错，请再试一次</string>
    <string name="login_wx_cancle">抱歉，没有登录成功，再试一次吧！</string>
    <string name="login_result_callback_msg" formatted="false">微信登录结果：%s</string>

    <string name="text_ingore">忽略</string>
    <string name="text_update_now">立即更新</string>
    <string name="text_guide_btn">立即体验</string>
    <string name="text_wechat">微信</string>
    <string name="text_wechat_friends">微信朋友圈</string>
    <string name="text_answer_count">回答  %1$d</string>
    <string name="text_comment_count">评论(%1$d)</string>
    <string name="text_title_answer_count">共%1$d条回答</string>
    <string name="text_del_user_dialog_content">确定将联系人“%1$s”删除，同时删除与该联系人的聊天记录</string>
    <string name="text_update_version_download_tip">已下载 </string>
    <string name="text_follow_count">%1$d个关注</string>
    <string name="text_next">下一步</string>
    <string name="text_web_view_html"><![CDATA[<html><head><style type=\'text/css\'>body {margin: 0;padding: 0 ;color:#8B8B8B} img {max-width: 95%%;;border: 0;vertical-align: middle;display:block;} *{word-wrap: break-word; line-height:1.5;}</style></head><body> %1$s </body></html>]]></string>
    <string name="text_answer_web_view_html"><![CDATA[<html><head><style type=\'text/css\'>body {margin: 0 ;padding: 11px ;color:#181818;} img {max-width: 95%%;;border: 0;vertical-align: middle;display:block;} *{word-wrap: break-word;line-height:1.5;}</style></head><body> %1$s </body></html>]]></string>
    <string name="text_check_phone_text">请先验证原手机号，短信验证码已发送至%1$s，请注意查收</string>
    <string name="text_update_phone_text">原手机号为%1$s，更换手机号后，下次可使用新的手机号登陆</string>

    <string name="text_other">其它</string>
    <string name="text_send">发送</string>
    <string name="text_report">举报</string>
    <string name="text_shock">震动</string>
    <string name="text_gender">性别</string>
    <string name="text_gender_women">女</string>
    <string name="text_gender_man">男</string>
    <string name="text_head_portrait">头像</string>
    <string name="text_loading">加载中</string>
    <string name="text_modify">修改</string>
    <string name="text_name">名字</string>
    <string name="text_quit">退出</string>
    <string name="text_cancel">取消</string>
    <string name="text_setting">设置</string>
    <string name="text_me_leader_invest">我的领投记录</string>
    <string name="text_me_request_calls">我的约谈记录</string>
    <string name="text_me_launched_pitches">我发起的项目</string>
    <string name="text_me_investments_pro">我的投资项目</string>
    <string name="text_me_shengpay_account">托管投资账户</string>
    <string name="text_see_perfile">查看我的个人资料</string>
    <string name="text_invited_answer">邀请回答</string>
    <string name="text_station_invited">站内邀请</string>
    <string name="text_invited_wechat_friends">邀请微信好友</string>
    <string name="text_invited_copy_path">复制邀请链接</string>
    <string name="text_copy">复制</string>
    <string name="text_copy_success">复制成功</string>
    <string name="text_add_question">发起问题</string>
    <string name="text_add_opinion">创建观点</string>
    <string name="text_share_question">分享</string>
    <string name="text_copy_path">复制链接</string>
    <string name="text_edit">修改</string>
    <string name="text_add_comment">添加新评论</string>
    <string name="text_phone_no">手机号</string>
    <string name="text_phone_no_">手机号：%s</string>
    <string name="text_verification_no">验证码</string>
    <string name="text_complete">完成</string>
    <string name="text_resend_verification_no">重新发送验证码</string>
    <string name="text_resend_verification_no_tip">请输入验证码完成手机绑定，如果未收到验证码点击重新发送验证码</string>
    <string name="text_send_verification_no">发送验证码</string>
    <string name="text_hottest">最热</string>
    <string name="text_lastest">最新</string>
    <string name="text_all">全部</string>
    <string name="text_already_agree">已赞同</string>
    <string name="text_agree">赞同</string>
    <string name="text_already_oppose">已反对</string>
    <string name="text_oppose">反对</string>
    <string name="text_refresh">刷新</string>
    <string name="text_answer_question">回答了该问题</string>
    <string name="text_add">添加</string>
    <string name="text_logout_content">退出后您将无法实时获取项目投资消息，确定退出吗？</string>
    <string name="text_vote_answer">为答案投票</string>
    <string name="text_update_account_password">修改账号密码</string>
    <string name="text_phone_no_bind">手机号绑定</string>
    <string name="text_bind_phone_no">绑定手机号</string>
    <string name="text_new_message">新消息通知</string>
    <string name="text_privacy_setting">隐私</string>
    <string name="text_clear_img_cache">清除图片缓存</string>
    <string name="text_help_feedback">帮助与反馈</string>
    <string name="text_about_community">关于筹道</string>
    <string name="text_about">关于</string>
    <string name="text_logout">退出登录</string>
    <string name="text_new_message_prompt">新消息提示</string>
    <string name="text_accept_new_message_prompt">接受新消息提示</string>
    <string name="text_notify_details">消息通知详情</string>
    <string name="text_voice">声音</string>
    <string name="text_report_4">不友善不文明用语信息</string>
    <string name="text_report_3">含有政治敏感信息</string>
    <string name="text_report_2">内容涉及抄袭他人版权</string>
    <string name="text_report_1">广告信息</string>
    <string name="text_follow">关注</string>
    <string name="text_already_follow">已关注</string>
    <string name="text_already_open">已开启</string>
    <string name="text_input_bind_phone_no">请输入您需要绑定的手机号码</string>
    <string name="text_message_without_interruption">功能消息免打扰</string>
    <string name="text_answers_title">Ta的回答</string>
    <string name="text_follow_title">Ta关注的人</string>
    <string name="text_question_title">Ta的提问</string>
    <string name="text_fans_title">Ta的粉丝</string>
    <string name="text_whole_motion">全部动态</string>
    <string name="text_expert_field">Ta擅长的领域</string>
    <string name="text_id_card_prove">身份证名</string>
    <string name="text_add_answer">添加答案</string>
    <string name="text_update_answer">修改答案</string>
    <string name="text_see_my_answer">查看我的回答</string>
    <string name="text_no_answers">还没有人回答，请赐答案</string>
    <string name="text_education">教育经历</string>
    <string name="text_experience">工作经验</string>
    <string name="text_address">城市</string>
    <string name="text_desc">个人简介</string>
    <string name="text_title">一句话头衔</string>
    <string name="text_nick_name">昵称</string>
    <string name="text_qa_help">常用QA</string>
    <string name="text_term_help">常用股权投资术语</string>
    <string name="text_bank_help">银行汇款帮助</string>
    <string name="text_shengfu_pay_help">盛付通支付帮助(移动版)</string>
    <string name="text_update_phone_verification">为了您的帐号安全，请先验证手机号</string>
    <string name="text_bind_phone_tip">还没有绑定手机号，立即绑定手机号，如账号出现问题，您可用手机号重置密码。</string>


    <string name="text_phone_check_success">手机校验成功</string>
    <string name="text_hint_input_verification_no">请输入验证码</string>
    <string name="text_hint_input_link_path">链接地址</string>
    <string name="text_hint_input_link_title">链接标题</string>
    <string name="text_hint_input_add_question">请写下你的问题并用问号结尾</string>
    <string name="text_hint_input_report_account">请输入举报原因</string>
    <string name="text_hint_input_comment_content">请填写评论内容</string>
    <string name="text_hint_input_phone">请输入正确的手机号</string>
    <string name="text_verification_no_send_success">验证码发送成功</string>

    <string name="text_version_name_middle">&#160; community&#160; </string>
    <string name="text_community_license_aggrement">筹道软件许可及服务协议</string>

    <string name="text_notify_details_description">关闭后，当收到筹道消息，通知提示将不显示发信人和内容摘要。</string>
    <string name="text_chouxiaodao_greet">Hi，我是筹小道\n
        有任何问题，请随时来找我！希望投资哪类项目？对哪类的问答感兴趣？使用App有什么困惑和不满？有什么好建议，欢迎和我沟通！\n
        我不一定能做到第一时间回复，但每一条留言我都会认真看；）</string>
    <string name="kick_out_info">您的账号已在其他设备登陆，如不是本人所为，请更改密码。</string>
    <string name="text_no_send_is_resend">确定重发此消息？</string>
    <string name="btn_resend">确定重发</string>

    <string name="recent_photos">最近照片</string>
    <string name="max_img_limit_reached">不能选择超过%d个图像</string>
    <string name="text_publish">发布</string>
    <string name="text_update_comment">修改评论</string>
    <string name="text_write_comment">写评论</string>
    <string name="text_save">保存</string>
    <string name="text_my_follow">我关注的人</string>
    <string name="text_ta_follow">Ta关注的人</string>
    <string name="text_my_fans">我的粉丝</string>
    <string name="text_my_answers">我的回答</string>
    <string name="text_my_questions">我的提问</string>
    <string name="text_ta_fans">Ta的粉丝</string>
    <string name="text_network_error">网络异常,请检查网络</string>
    <string name="text_has_over">已超出</string>
    <string name="text_has_over_text_size">已超出%d字</string>
    <string name="text_report_content">举报内容</string>
    <string name="text_update_phone_no">更换手机号</string>
    <string name="text_network_timeout">请求超时,请稍后重试</string>
    <string name="text_report_success">举报成功</string>
    <string name="text_add_report_content">请输入举报内容</string>
    <string name="text_add_question_title">请输入问题标题</string>
    <string name="text_add_question_content">请输入问题内容</string>
    <string name="text_img_damage">图片损坏，请换张图片重试！</string>
    <string name="text_img_no_existent">图片不存在，请换张图片重试！</string>
    <string name="text_network_un_smooth">网络不流畅</string>
    <string name="text_please_add_comment">请输入评论</string>
    <string name="text_please_choise">请选择</string>
    <string name="text_my_friends">我的好友</string>
    <string name="text_contacts_empty">正在加载联系人列表&#8230;</string>
    <string name="text_send_message">发消息</string>
    <string name="text_accept_contact">通过验证</string>
    <string name="text_sdd_contact">添加到通讯录</string>
    <string name="text_search">搜索:</string>
    <string name="search">搜索</string>
    <string name="text_no_result">搜索没有结果</string>
    <string name="text_new_friends">新的朋友</string>
    <string name="text_select_contacts">选择联系人</string>
    <string name="text_friend_verification">好友验证</string>
    <string name="text_add_links">添加链接</string>
    <string name="more_msg_count">&#183;&#183;&#183;</string>
    <string name="text_my_contacts">联系人</string>
    <string name="text_message_empty">还没有任何消息</string>
    <string name="text_local_search">搜索联系人</string>
    <string name="text_contacts_search">搜索昵称/筹道ID/手机号</string>
    <string name="text_wait_verification_friends">你需要发送验证申请，等待对方通过</string>
    <string name="text_head_no_network">目前网络不可用，请检查您的网络设置</string>
    <string name="text_friend_confirmation">加我为好友时需要好友验证</string>
    <string name="text_no_tow_friend">您选择的联系人都不是您的双向好友，请先请求添加</string>
    <string name="add_friend">添加好友设置</string>
    <string name="text_local_unknown_msg">该版本不支持此类消息，请更新</string>
    <string name="text_need_verification_info">请输入验证信息</string>

    <string name="retract">收起</string>
    <string name="spread">查看全部资料</string>
</resources>
