<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_twelve_dp"
    android:background="@drawable/radius_dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_twenty_dp"
            android:gravity="center"
            android:text="@string/text_vote_answer"
            android:textColor="#606060"
            android:textSize="@dimen/text_seventeen_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tb_answer_up"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/icon_white_bg"
            android:drawableTop="@drawable/taggle_button_up_bg"
            android:paddingBottom="@dimen/padding_ten_dp"
            android:textColor="@color/tab_main_text_color"
            android:textOff="@string/text_agree"
            android:textOn="@string/text_already_agree"
            android:textSize="@dimen/text_twelve_sp" />

        <ToggleButton
            android:id="@+id/tb_answer_down"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/icon_white_bg"
            android:drawableTop="@drawable/taggle_button_down_bg"
            android:paddingBottom="@dimen/padding_ten_dp"
            android:textColor="@color/tab_main_text_color"
            android:textOff="@string/text_oppose"
            android:textOn="@string/text_already_oppose"
            android:textSize="@dimen/text_twelve_sp" />
    </LinearLayout>
</LinearLayout>