<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="@dimen/targets_sixty_dp"
        android:text="@string/text_report"
        android:textColor="#a2a2a2"
        android:textSize="@dimen/text_fourteen_sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/tv_report_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_view_list_selector_bg"
        android:gravity="center"
        android:minHeight="@dimen/targets_sixty_dp"
        android:text="@string/text_report_1"
        android:textColor="@color/text_defult_color"
        android:textSize="@dimen/text_seventeen_sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/ll_report_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_report_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_view_list_selector_bg"
            android:gravity="center"
            android:minHeight="@dimen/targets_sixty_dp"
            android:text="@string/text_report_2"
            android:textColor="@color/text_defult_color"
            android:textSize="@dimen/text_seventeen_sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_report_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_view_list_selector_bg"
        android:gravity="center"
        android:minHeight="@dimen/targets_sixty_dp"
        android:text="@string/text_report_3"
        android:textColor="@color/text_defult_color"
        android:textSize="@dimen/text_seventeen_sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/tv_report_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_view_list_selector_bg"
        android:gravity="center"
        android:minHeight="@dimen/targets_sixty_dp"
        android:text="@string/text_report_4"
        android:textColor="@color/text_defult_color"
        android:textSize="@dimen/text_seventeen_sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/tv_report_another"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_view_list_selector_bg"
        android:gravity="center"
        android:minHeight="@dimen/targets_sixty_dp"
        android:text="@string/text_other"
        android:textColor="@color/text_defult_color"
        android:textSize="@dimen/text_seventeen_sp" />


</LinearLayout>