<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_forty_dp"
            android:text="@string/text_logout_content"
            android:textColor="#181818"
            android:textSize="@dimen/text_eighteen_sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/targets_sixty_dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_quit"
            android:textColor="#8f8f8f"
            android:textSize="18dp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_cancel"
            android:textColor="@color/tab_check_color"
            android:textSize="18dp" />


    </LinearLayout>
</LinearLayout>