<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.community.equity.BindPhoneNoActivity">

    <com.community.equity.view.TopView
        android:id="@+id/topview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/ll_unbind_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_thirty_dp"
                android:src="@drawable/icon_phonenumber_unlock" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_fifty_dp"
                android:layout_marginRight="@dimen/margin_fifty_dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/text_bind_phone_tip"
                android:textColor="#181818"
                android:textSize="@dimen/text_seventeen_sp" />

            <TextView
                android:id="@+id/tv_bind_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_fifty_dp"
                android:layout_marginRight="@dimen/margin_fifty_dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_chenge_phone_bg"
                android:gravity="center"
                android:minHeight="@dimen/targets_fifty_dp"
                android:text="@string/text_bind_phone_no"
                android:textColor="@color/btn_follow_text_color"
                android:textSize="@dimen/text_seventeen_sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_binding_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_thirty_dp"
                android:src="@drawable/icon_phonenumber_lock" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_fifty_dp"
                android:layout_marginRight="@dimen/margin_fifty_dp"
                android:gravity="center_horizontal"
                android:text="@string/text_phone_no_"
                android:textColor="#181818"
                android:textSize="@dimen/text_seventeen_sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_ten_dp"
                android:text="@string/text_update_phone_verification"
                android:textColor="#a2a2a2"
                android:textSize="@dimen/text_seventeen_sp" />

            <TextView
                android:id="@+id/tv_update_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_fifty_dp"
                android:layout_marginRight="@dimen/margin_fifty_dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_chenge_phone_bg"
                android:gravity="center"
                android:minHeight="@dimen/targets_fifty_dp"
                android:text="@string/text_send_verification_no"
                android:textColor="@color/btn_follow_text_color"
                android:textSize="@dimen/text_seventeen_sp" />

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
